Add Activities to the manifest
TODO: how to avoid redirect uris?

--- a/auth-lib/src/main/AndroidManifest.xml
+++ b/auth-lib/src/main/AndroidManifest.xml
@@ -21,6 +21,31 @@
     under the License.
 -->
 
-<manifest package="com.spotify.sdk.android.authentication">
-    <application/>
+<manifest package="com.spotify.sdk.android.authentication"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+        <activity
+            android:name="com.spotify.sdk.android.authentication.WebAuthResultActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <!--TODO(dima) how to remove it? -->
+                <data
+                    android:host="callback"
+                    android:scheme="testschema"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
+
+    </application>
+
 </manifest>
