--- a/auth-lib/src/main/AndroidManifest.xml
+++ b/auth-lib/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
 <manifest package="com.spotify.sdk.android.authentication"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         <activity
             android:name="com.spotify.sdk.android.authentication.WebAuthResultActivity"
