--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
 }
