Add `before_script` to accept the license

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
       
+before_script:
+  - android update sdk --no-ui --filter build-tools-24.0.2,android-24,extra-android-m2repository
+
 script:
   - ./gradlew auth-lib:build auth-lib:check
 
