--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ android:
 
   licenses: 
     - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-c81a61d9'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
       
