--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 script:
-  - ./gradlew build 
+  - ./gradlew clean build 
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
