--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -44,6 +44,11 @@ android {
 
     lintOptions {
         lintConfig file("${project.rootDir}/config/lint.xml")
+        quiet false
+        warningsAsErrors false
+        textReport true
+        textOutput 'stdout'
+        xmlReport false
     }
 }
 
