--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -52,6 +52,11 @@ android {
 
     lintOptions {
         lintConfig file("${project.rootDir}/config/lint.xml")
+        quiet false
+        warningsAsErrors false
+        textReport true
+        textOutput 'stdout'
+        xmlReport false
     }
 }
 
