--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ jdk:
 
 android:
   components:
-    - platform-tools
     - tools
+    - tools
+    - platform-tools
     - build-tools-24.0.2
     - android-24
     - extra-android-m2repository
