Limit for checks for auth-libs for now. (#7)
Finalizing Travis CI integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,20 @@ jdk:
 
 android:
   components:
-    - platform-tools
     - tools
+    - tools
+    - platform-tools
     - build-tools-24.0.2
     - android-24
-    - add-on
-    - extra  
+    - extra-android-m2repository
 
-  licenses: 
-    - 'android-sdk-preview-license-52d11cd2'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-      
+before_install:
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+
 script:
-  - ./gradlew build check
+  - ./gradlew clean build 
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
