Update project to the Android Studio 3.0  * update robolectric to the 3.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-25.0.2
+    - build-tools-26.0.1
     - android-25
     - extra-android-m2repository
 
@@ -17,8 +17,11 @@ before_install:
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
+before_script:
+  - echo y | ${ANDROID_HOME}tools/bin/sdkmanager "build-tools;26.0.2" #remove when travis will support build tools 26.0.2
+
 script:
-  - ./gradlew clean build 
+  - ./gradlew clean build
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
