--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
     }
 }
 
@@ -36,9 +37,6 @@ plugins {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
