--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -26,12 +26,12 @@ project.archivesBaseName = 'auth'
 project.version = '1.0.0-alpha'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName '1.0.0'
     }
@@ -54,14 +54,19 @@ android {
         textOutput 'stdout'
         xmlReport false
     }
+
+
+    testOptions {
+        unitTests.includeAndroidResources true
+    }
 }
 
 dependencies {
-    compile 'com.android.support:customtabs:25.1.1'
+    implementation 'com.android.support:customtabs:26.1.0'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.9.5'
-    testCompile 'org.robolectric:robolectric:3.1.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.8.9'
+    testImplementation 'org.robolectric:robolectric:3.5'
 }
 
 /*
