--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -22,13 +22,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.spotify.sdk.android.authentication.sample"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -53,9 +53,9 @@ android {
 }
 
 dependencies {
-    compile 'com.spotify.android:auth:1.0.0-alpha'
-
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.spotify.android:auth:1.0.0-alpha'  //TODO change to proper version after release to the maven repo
+    implementation 'com.android.support:customtabs:26.1.0' //TODO remove after release to the maven repo
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
 }
