--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -33,7 +33,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
-        versionName '1.0.0'
+        versionName project.version
     }
 
     buildTypes {
