--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.android.library'
 
 project.group = 'com.spotify.android'
 project.archivesBaseName = 'auth'
-project.version = '1.0.0-alpha'
+project.version = '1.0.1'
 
 android {
     compileSdkVersion 27
