--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -53,7 +53,7 @@ android {
 }
 
 dependencies {
-    compile 'com.spotify.android:auth:1.0.0-alpha'
+    compile 'com.spotify.android:auth:1.1.0'
 
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
