--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -26,12 +26,12 @@ project.archivesBaseName = 'auth'
 project.version = '1.1.0'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 2
         versionName project.version
     }
@@ -63,11 +63,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:customtabs:27.0.2'
+    implementation 'androidx.browser:browser:1.0.0-rc02'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.12.0'
-    testCompile 'org.robolectric:robolectric:3.5.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.20.0'
+    testImplementation 'org.robolectric:robolectric:3.8'
 }
 
 /*
