--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@
  */
 
 buildscript {
+    ext.kotlin_version = '1.2.61'
     repositories {
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
