--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -23,11 +23,11 @@ apply plugin: 'com.android.library'
 
 project.group = 'com.spotify.android'
 project.archivesBaseName = 'auth'
-project.version = '1.1.0'
+project.version = '1.1.1'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
@@ -63,11 +63,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:customtabs:27.0.2'
+    api 'com.android.support:customtabs:27.0.2'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.12.0'
-    testCompile 'org.robolectric:robolectric:3.5.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.12.0'
+    testImplementation 'org.robolectric:robolectric:3.5.1'
 }
 
 /*
