--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -26,12 +26,12 @@ project.archivesBaseName = 'auth'
 project.version = '1.1.1'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion 16
+        targetSdkVersion 28
         versionCode 2
         versionName project.version
     }
@@ -63,11 +63,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:customtabs:27.0.2'
+    implementation 'androidx.browser:browser:1.0.0'
 
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.12.0'
-    testImplementation 'org.robolectric:robolectric:3.5.1'
+    testImplementation 'org.mockito:mockito-core:2.21.0'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
 }
 
 /*
@@ -76,38 +76,12 @@ dependencies {
  */
 
 apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
 
 task checkstyle(type: Checkstyle) {
     configFile file("${project.rootDir}/config/checkstyle.xml")
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
-    classpath = files()
-}
-
-task findbugs(type: FindBugs) {
-    ignoreFailures = false
-    effort = "max"
-    reportLevel = "high"
-    excludeFilter = new File("${project.rootDir}/config/findbugs-filter.xml")
-    classes = files("${project.rootDir}/auth-lib/build/intermediates/classes")
-
-    source 'src'
-    include '**/*.java'
-    exclude '**/gen/**'
-
-    reports {
-        xml.enabled = false
-        html.enabled = true
-        xml {
-            destination "$project.buildDir/reports/findbugs/findbugs.xml"
-        }
-        html {
-            destination "$project.buildDir/reports/findbugs/findbugs.html"
-        }
-    }
-
     classpath = files()
 }
 
