--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -117,7 +117,7 @@ install {
             pom {
                 project {
                     name project.group + ':' + project.archivesBaseName
-                    description 'Spotify authentication and authorization for Android'
+                    description 'Spotify authorization library for Android'
                     url 'https://github.com/spotify/android-auth'
 
                     licenses {
