--- a/auth-lib/src/main/AndroidManifest.xml
+++ b/auth-lib/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     under the License.
 -->
 
-<manifest package="com.spotify.sdk.android.authentication"
+<manifest package="com.spotify.sdk.android.auth"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -29,7 +29,7 @@
     <application>
         <activity
             android:exported="true"
-            android:name="com.spotify.sdk.android.authentication.AuthCallbackActivity"
+            android:name="com.spotify.sdk.android.auth.AuthCallbackActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
 
@@ -44,7 +44,7 @@
         </activity>
 
         <activity
-            android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:name="com.spotify.sdk.android.auth.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
 
