Remove CustomTabAuthHandler from auth lib
It was causing trouble and does not add too much value to the UX

--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -53,6 +53,7 @@ android {
 }
 
 dependencies {
+    //implementation files('../auth-lib/build/outputs/aar/auth-release.aar')
     implementation 'com.spotify.android:auth:1.2.1'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
