--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -25,6 +25,15 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
 
+    signingConfigs {
+        debug {
+            storeFile file('keystore/example.keystore')
+            storePassword 'example'
+            keyAlias 'example_alias'
+            keyPassword 'example'
+        }
+    }
+
     defaultConfig {
         applicationId "com.spotify.sdk.android.authentication.sample"
         minSdkVersion 16
@@ -36,6 +45,10 @@ android {
 
     }
     buildTypes {
+        debug {
+            debuggable true
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt')
@@ -53,7 +66,7 @@ android {
 }
 
 dependencies {
-    //implementation files('../auth-lib/build/outputs/aar/auth-release.aar')
+//    implementation files('../auth-lib/build/outputs/aar/auth-release.aar')
     implementation 'com.spotify.android:auth:1.2.2'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
