--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -29,11 +29,16 @@ android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 2
         versionName project.version
+        buildConfigField 'String', 'LIB_VERSION_NAME', "\"$project.version\""
     }
 
     buildTypes {
