Define queries element so that we conform to package visibility restrictions when targeting Android 11 (API 30)

--- a/auth-lib/src/main/AndroidManifest.xml
+++ b/auth-lib/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <queries>
+        <intent>
+            <action android:name="com.spotify.sso.action.START_AUTH_FLOW" />
+            <data android:mimeType="text/plain" />
+        </intent>
+    </queries>
+
     <application>
 
         <activity
