--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,14 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-30.0.0
-    - android-30
+    # Note that the tools section appears twice on purpose as it’s required
+    # to get the newest Android SDK tools. Source: Travis CI docs.
+    - build-tools-30.0.2
     - extra-android-m2repository
 
 before_install:
+  - echo yes | sdkmanager "platforms;android-30"
+  - echo yes | sdkmanager "build-tools;30.0.2"
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
