--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -23,11 +23,11 @@ apply plugin: 'com.android.library'
 
 project.group = 'com.spotify.android'
 project.archivesBaseName = 'auth'
-project.version = '1.2.6'
+project.version = '1.2.7'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.2'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
 
     buildFeatures {
         buildConfig = true
@@ -35,9 +35,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 2
-        versionName project.version
+        targetSdkVersion 31
         buildConfigField 'String', 'LIB_VERSION_NAME', "\"$project.version\""
     }
 
@@ -65,6 +63,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.browser:browser:1.4.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.21.0'
@@ -86,15 +85,16 @@ task checkstyle(type: Checkstyle) {
     classpath = files()
 }
 
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 task javadoc(type: Javadoc) {
+    dependsOn 'generateReleaseRFile'
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
     classpath += files("build/generated/source/r/release")
@@ -103,8 +103,14 @@ task javadoc(type: Javadoc) {
     failOnError false
 }
 
+afterEvaluate {
+    javadoc.classpath += files(android.libraryVariants.collect { variant ->
+        variant.javaCompileProvider.get().classpath.files
+    })
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
@@ -113,10 +119,10 @@ artifacts {
     archives sourcesJar
 }
 
-if (signingEnabled == "true") {
-    signing {
-        sign configurations.archives
-    }
+ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
+
+signing {
+    sign publishing.publications
 }
 
 project.ext["ossrhUsername"] = ''
@@ -142,50 +148,62 @@ def getSigningVariables() {
 
 /*
     Deployment to OSSRH repository
-    1. run: ./gradlew uploadArchives -PsigningEnabled=true
+    1. run: ./gradlew :auth-lib:assembleRelease and then ./gradlew :auth-lib:publishReleasePublicationToMavenRepository
     2. login to https://s01.oss.sonatype.org/ (you need to have access to auth lib OSSRH repository)
     3. if everything looks correctly, close and then release the staging repository.
     More info here: https://central.sonatype.org/publish/release/
  */
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            getSigningVariables()
+afterEvaluate {
+    publishing {
+        repositories {
+            maven {
+                getSigningVariables()
 
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: project.ext["ossrhUsername"], password: project.ext["ossrhPassword"])
+                def releaseRepo = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+                def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+                url = isReleaseVersion ? releaseRepo : snapshotRepo
+                credentials {
+                    username = project.ext["ossrhUsername"]
+                    password = project.ext["ossrhPassword"]
+                }
             }
+        }
 
-            snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: project.ext["ossrhUsername"], password: project.ext["ossrhPassword"])
-            }
+        publications {
+            release(MavenPublication) {
+                from components.release
+                artifact javadocJar
+                artifact sourcesJar
 
-            pom.project {
-                name project.group + ':' + project.archivesBaseName
-                packaging 'aar'
-                description 'Spotify authorization library for Android'
-                url 'https://github.com/spotify/android-auth'
+                groupId = project.group
+                artifactId = project.archivesBaseName
+                version = project.version
 
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                pom {
+                    name = project.group + ':' + project.archivesBaseName
+                    packaging = 'aar'
+                    description = 'Spotify authorization library for Android'
+                    url = 'https://github.com/spotify/android-auth'
+
+                    licenses {
+                        license {
+                            name = 'The Apache Software License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
                     }
-                }
 
-                scm {
-                    connection 'scm:git:https://github.com/spotify/android-auth.git'
-                    developerConnection 'scm:git:git@github.com:spotify/android-auth.git'
-                    url 'https://github.com/spotify/android-auth'
-                }
+                    scm {
+                        connection = 'scm:git:https://github.com/spotify/android-auth.git'
+                        developerConnection = 'scm:git:git@github.com:spotify/android-auth.git'
+                        url = 'https://github.com/spotify/android-auth'
+                    }
 
-                developers {
-                    developer {
-                        id 'erikg'
-                        name 'Erik Ghonyan'
-                        email 'erikg@spotify.com'
+                    developers {
+                        developer {
+                            id = 'erikg'
+                            name = 'Erik Ghonyan'
+                            email = 'erikg@spotify.com'
+                        }
                     }
                 }
             }
