--- a/auth-sample/src/main/AndroidManifest.xml
+++ b/auth-sample/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.spotify.sdk.android.auth.sample.MainActivity"
-            android:configChanges="keyboardHidden|keyboard|orientation|screenSize">
+            android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
