--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -91,8 +91,9 @@ android {
 dependencies {
     implementation 'androidx.browser:browser:1.4.0'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.21.0'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    testImplementation 'org.mockito:mockito-inline:2.28.2'
     testImplementation 'org.robolectric:robolectric:4.7.3'
 }
 
